--- a/package.json
+++ b/package.json
@@ -1,33 +1,39 @@
 {
-	"name": "@zedsols/better-ecom-node-js",
-	"version": "0.1.0",
-	"private": true,
-	"scripts": {
-		"biome:check": "biome check",
-		"biome:safe": "biome check --write",
-		"biome:unsafe": "biome check --write --unsafe",
-		"dev": "tsx --watch src/server.ts",
-		"start": "tsx src/server.ts"
-	},
-	"packageManager": "pnpm@10.6.2",
-	"devDependencies": {
-		"@biomejs/biome": "^1.9.4",
-		"@types/cors": "^2.8.17",
-		"@types/express": "^5.0.1",
-		"@types/morgan": "^1.9.9",
-		"@types/multer": "^1.4.12",
-		"@types/nodemailer": "^6.4.17",
-		"tsx": "^4.19.3"
-	},
-	"dependencies": {
-		"@aws-sdk/client-s3": "^3.772.0",
-		"cors": "^2.8.5",
-		"express": "^4.21.2",
-		"morgan": "^1.10.0",
-		"multer": "1.4.5-lts.2",
-		"nodemailer": "^6.10.0",
-		"socket.io": "^4.8.1",
-		"uuid": "^11.1.0",
-		"zod": "^3.24.2"
-	}
+  "name": "@zedsols/better-ecom-node-js",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "biome:check": "biome check",
+    "biome:safe": "biome check --write",
+    "biome:unsafe": "biome check --write --unsafe",
+    "dev": "tsx --watch src/server.ts",
+    "start": "tsx src/server.ts"
+  },
+  "packageManager": "pnpm@10.6.2",
+
+  "dependencies": {
+    "@aws-sdk/client-s3": "^3.772.0",
+    "@libsql/client": "^0.15.0",
+    "better-auth": "^1.2.4",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "drizzle-orm": "^0.41.0",
+    "express": "^4.21.2",
+    "morgan": "^1.10.0",
+    "multer": "1.4.5-lts.2",
+    "nodemailer": "^6.10.0",
+    "socket.io": "^4.8.1",
+    "uuid": "^11.1.0",
+    "zod": "^3.24.2"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "^1.9.4",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.1",
+    "@types/morgan": "^1.9.9",
+    "@types/multer": "^1.4.12",
+    "@types/nodemailer": "^6.4.17",
+    "drizzle-kit": "^0.30.5",
+    "tsx": "^4.19.3"
+  }
 }
